--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+solc_version = "0.8.19"
+
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/",
+    "@uniswap/=lib/",
+    "@chainlink/=lib/chainlink"
+]
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
